--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -135,10 +135,205 @@
   <data name="Merchant.Text" xml:space="preserve">
     <value>MERCHANT REGISTRATION</value>
   </data>
-  <data name="Username.Text" xml:space="preserve">
-    <value>Username</value>
-  </data>
   <data name="Verify.Text" xml:space="preserve">
     <value>Verify-Email</value>
+  </data>
+  <data name="btnVerify.Content" xml:space="preserve">
+    <value>VERIFY</value>
+  </data>
+  <data name="ConfirmPIN.Text" xml:space="preserve">
+    <value>Confirm PIN</value>
+  </data>
+  <data name="Email.Text" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="InvalidPhone" xml:space="preserve">
+    <value>Invalid phone number.</value>
+  </data>
+  <data name="MatchEmail" xml:space="preserve">
+    <value>The emails do not match</value>
+  </data>
+  <data name="MatchPIN" xml:space="preserve">
+    <value>The PINs do not match.</value>
+  </data>
+  <data name="PIN.Text" xml:space="preserve">
+    <value>PIN</value>
+  </data>
+  <data name="Phone.Text" xml:space="preserve">
+    <value>Phone</value>
+  </data>
+  <data name="RequiredCode" xml:space="preserve">
+    <value>Verification Code is required.</value>
+  </data>
+  <data name="RequiredEmail" xml:space="preserve">
+    <value>Email is required</value>
+  </data>
+  <data name="RequiredPIN" xml:space="preserve">
+    <value>PIN is required.</value>
+  </data>
+  <data name="Submit.Content" xml:space="preserve">
+    <value>SUBMIT</value>
+  </data>
+  <data name="ValidPIN" xml:space="preserve">
+    <value>The PIN must be at 4 digits</value>
+  </data>
+  <data name="AddCard.Text" xml:space="preserve">
+    <value>ADD CARD</value>
+  </data>
+  <data name="Agent.Text" xml:space="preserve">
+    <value>AGENT REGISTRATION</value>
+  </data>
+  <data name="AgentApp.Text" xml:space="preserve">
+    <value>Agent Application</value>
+  </data>
+  <data name="Bank.Text" xml:space="preserve">
+    <value>Bank</value>
+  </data>
+  <data name="btnSignIn.Content" xml:space="preserve">
+    <value>SIGN IN</value>
+  </data>
+  <data name="CardNo.Text" xml:space="preserve">
+    <value>Card No</value>
+  </data>
+  <data name="CardRemoved" xml:space="preserve">
+    <value>Card removed successfully</value>
+  </data>
+  <data name="CreatePin.Text" xml:space="preserve">
+    <value>Create PIN</value>
+  </data>
+  <data name="deleteitem" xml:space="preserve">
+    <value>Are you sure you want to delete the card?</value>
+  </data>
+  <data name="Edit.Text" xml:space="preserve">
+    <value>EDIT</value>
+  </data>
+  <data name="EditCard.Text" xml:space="preserve">
+    <value>EDIT CARD</value>
+  </data>
+  <data name="ConfirmPassword.Text" xml:space="preserve">
+    <value>Confirm Password</value>
+  </data>
+  <data name="Enter.Text" xml:space="preserve">
+    <value>Enter amount to charge</value>
+  </data>
+  <data name="Enterphone" xml:space="preserve">
+    <value>Enter a valid phone number</value>
+  </data>
+  <data name="EnterPin.Text" xml:space="preserve">
+    <value>Enter PIN</value>
+  </data>
+  <data name="Expiry.Text" xml:space="preserve">
+    <value>Expiry Date</value>
+  </data>
+  <data name="Generate.Content" xml:space="preserve">
+    <value>GENERATE</value>
+  </data>
+  <data name="GenerateQr.Text" xml:space="preserve">
+    <value>GENERATE QR</value>
+  </data>
+  <data name="IdNo.PlaceholderText" xml:space="preserve">
+    <value>Enter ID/Passport No.</value>
+  </data>
+  <data name="IncorrectCredentials" xml:space="preserve">
+    <value>Incorrect credentials provided</value>
+  </data>
+  <data name="MatchPassword" xml:space="preserve">
+    <value>The passwords do not match</value>
+  </data>
+  <data name="NeedCard" xml:space="preserve">
+    <value>Add Card details first</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="NoCards.Text" xml:space="preserve">
+    <value>No Cards</value>
+  </data>
+  <data name="Password.Text" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="Print.Content" xml:space="preserve">
+    <value>PRINT</value>
+  </data>
+  <data name="Profile.Text" xml:space="preserve">
+    <value>Profile</value>
+  </data>
+  <data name="QrGenerated.Text" xml:space="preserve">
+    <value>QR HAS BEEN GENERATED SUCCESSFULLY</value>
+  </data>
+  <data name="RegisterUser.Text" xml:space="preserve">
+    <value>REGISTER USER</value>
+  </data>
+  <data name="Remove.Text" xml:space="preserve">
+    <value>REMOVE</value>
+  </data>
+  <data name="RemoveCard" xml:space="preserve">
+    <value>Remove card?</value>
+  </data>
+  <data name="RequiredBank" xml:space="preserve">
+    <value>Enter bank name</value>
+  </data>
+  <data name="RequiredCard" xml:space="preserve">
+    <value>Enter Card number</value>
+  </data>
+  <data name="RequiredCVV" xml:space="preserve">
+    <value>Enter CVV</value>
+  </data>
+  <data name="RequiredID" xml:space="preserve">
+    <value>ID No is required.</value>
+  </data>
+  <data name="RequiredPassword" xml:space="preserve">
+    <value>Password is required</value>
+  </data>
+  <data name="ResetPin.Text" xml:space="preserve">
+    <value>Reset user PIN</value>
+  </data>
+  <data name="ValidPassword" xml:space="preserve">
+    <value>Password must be at least 6 characters</value>
+  </data>
+  <data name="VerifyPin.Text" xml:space="preserve">
+    <value>Verify PIN</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Yes</value>
+  </data>
+  <data name="CreateNewUser.Text" xml:space="preserve">
+    <value>Create New User</value>
+  </data>
+  <data name="EnterVerification.PlaceholderText" xml:space="preserve">
+    <value>Enter Verification Code</value>
+  </data>
+  <data name="FirstName.PlaceholderText" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="Forgot.Text" xml:space="preserve">
+    <value>Forgot Password? Click here to reset</value>
+  </data>
+  <data name="Home.Text" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="ManageUserCard.Text" xml:space="preserve">
+    <value>Manage User Cards</value>
+  </data>
+  <data name="RequiredFirstName" xml:space="preserve">
+    <value>First Name is required.</value>
+  </data>
+  <data name="RequiredLastName" xml:space="preserve">
+    <value>Last Name is required</value>
+  </data>
+  <data name="txAddNewCard.Text" xml:space="preserve">
+    <value>Add New Card</value>
+  </data>
+  <data name="txPrintQR.Text" xml:space="preserve">
+    <value>Print QR</value>
+  </data>
+  <data name="btnScan.Content" xml:space="preserve">
+    <value>SCAN QR</value>
+  </data>
+  <data name="Logout.Text" xml:space="preserve">
+    <value>Log Out</value>
+  </data>
+  <data name="ManageCard.Text" xml:space="preserve">
+    <value>Manage Cards</value>
   </data>
 </root>
