--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -336,4 +336,22 @@
   <data name="ManageCard.Text" xml:space="preserve">
     <value>Manage Cards</value>
   </data>
+  <data name="Rescan" xml:space="preserve">
+    <value>Rescan to capture details</value>
+  </data>
+  <data name="EnterCard.PlaceholderText" xml:space="preserve">
+    <value>Enter Card No</value>
+  </data>
+  <data name="EnterCode.PlaceholderText" xml:space="preserve">
+    <value>Enter Verification Code</value>
+  </data>
+  <data name="EnterCVV.PlaceholderText" xml:space="preserve">
+    <value>Enter CVV</value>
+  </data>
+  <data name="LastName.PlaceholderText" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="TypeBank.PlaceholderText" xml:space="preserve">
+    <value>Type your Bank</value>
+  </data>
 </root>
